tests/error/template_ternary.gw
// [contains] invalid expression for function call
template<~A~>
function void test(A a){}

(maybe ? test : test)(1);
